# bob-launcher-plugins

./: .gitignore  AUTHORS  README.md  meson.build  meson_options.txt
data/: io.github.trbjo.bob.launcher.plugins.gschema.xml
src/: api-bay.vala  calculator-plugin.vala  chromium-plugin.vala  command-plugin.vala  common-actions.vala  desktop-file-plugin.vala  desktop-file-service.vala  downloads-plugin.vala  file-op-plugin.vala  gnome-bookmarks-plugin.vala  imgur-plugin.vala  mpris-plugin.vala  pass-plugin.vala  pastebin-plugin.vala  recently-used.vala  selection-plugin.vala  snippets-database.vala  snippets-plugin.vala  ssh-plugin.vala  systemd-service-plugin.vala  tracker.vala  transmission-plugin.vala  unknown-match.vala  url-shortener-plugin.vala  wifi-plugin.vala
src/calendar/: calendar-create-match.vala  calendar-delete-match.vala  calendar-event-tooltip.vala  calendar-icon-widget.vala  calendar-match-action-target.vala  calendar-match-edit-description.vala  calendar-match-edit-title.vala  calendar-match-helper.vala  calendar-match-main.vala  calendar-search.vala  calendar-service.vapi  calendar_service.c  calendar_service.h  date-parser.vala
src/clipboard/: clipboard-database.vala  clipboard-hashtable.c  clipboard-hashtable.h  clipboard-manager-plugin.vala  clipboard-matches.vala  wayland-clipboard.c  wayland-clipboard.h  wayland-clipboard.vala  wayland_protocol_check.c  wayland_protocol_check.h  wlr-data-control.h
src/clipboard/vapi/: clipboard-hashtable.vapi  wayland-clipboard.vapi  wayland-protocol-check.vapi
src/file-search/: file-hashtable.c  file-hashtable.h  file-monitor.c  file-monitor.h  file-search-plugin.vala  file-tree-manager.c  file-tree-manager.h
src/file-search/vapi/: file-hashtable.vapi  file-monitor.vapi  file-tree-manager.vapi
src/firefox-history/: firefox-bookmarks-plugin.vala  firefox-match.vala
src/process-monitor/: posix-utils.vala  process-match.vala  process-monitor.vala
subprojects/: database.wrap  file-monitor.wrap  vurla  vurla.wrap
vapi/: bob-launcher.h  bob-launcher.vapi  constants.h  constants.vapi  data-sink-actions.h  data-sink-actions.vapi  gthread_stub.c  icon-cache-service.h  icon-cache-service.vapi  levensteihn.vapi  match.h  no-thread-init.h  result-container.h  result-container.vapi  xxhash-override.h
