# Plugin compilation options
# 0 = disabled, 1 = static (compiled into launcher), 2 = dynamic (.so file)

option('plugin_api_bay',           type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'API Bay plugin')
option('plugin_calculator',        type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Calculator plugin')
option('plugin_chromium',          type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Chromium plugin')
option('plugin_clipboard_manager', type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Clipboard manager plugin')
option('plugin_command',           type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Command plugin')
option('plugin_common_actions',    type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Common actions plugin')
option('plugin_desktop_file',      type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Desktop file plugin')
option('plugin_downloads',         type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Downloads plugin')
option('plugin_file_op',           type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'File operations plugin')
option('plugin_file_search',       type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'File search plugin')
option('plugin_firefox_bookmarks', type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Firefox bookmarks plugin')
option('plugin_gnome_bookmarks',   type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'GNOME bookmarks plugin')
option('plugin_imgur',             type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Imgur plugin')
option('plugin_mpris',             type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'MPRIS plugin')
option('plugin_pass',              type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Pass password manager plugin')
option('plugin_pastebin',          type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Pastebin plugin')
option('plugin_recently_used',     type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Recently used files plugin')
option('plugin_ssh',               type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'SSH plugin')
option('plugin_systemd_service',   type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Systemd service plugin')
option('plugin_process_monitor',   type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Process monitor plugin')
option('plugin_tracker',           type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Tracker search plugin')
option('plugin_transmission',      type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'Transmission plugin')
option('plugin_url_shortener',     type: 'combo', choices: ['0', '1', '2'], value: '2', description: 'URL shortener plugin')
